--- a/css/cornerstone.navtools.css
+++ b/css/cornerstone.navtools.css
@@ -115,7 +115,10 @@ a .profile-info{
   -ms-transform: rotate(180deg);
   transform: rotate(180deg);
 }
-#navtools li{margin: 0;}
+#navtools li{
+  margin: 0;
+  padding:0;
+}
 .profile-menu .menu,
 #navtools ul ul {
   position: relative;
