--- a/css/cornerstone.navtools.css
+++ b/css/cornerstone.navtools.css
@@ -196,11 +196,12 @@ a .profile-info {
     margin-right: 10px;
 }
 #cornerstone-tools .separator {
-    margin-top: -20px;
+    margin:0;
     padding: 0;
 }
 #cornerstone-tools hr {
      border-bottom: 1px solid rgba(6, 6, 6, 0.41);
+     margin: 0;
 }
 @media (max-width: 1280px) {
     html body {
